--- a/src/components/display/Display.scss
+++ b/src/components/display/Display.scss
@@ -1,7 +1,9 @@
 .Display {
-  flex: 7;
+  width: 70%;
   border: 1px solid black;
   padding: 10px 45px;
+  height: 100%;
+  overflow-y: auto;
 }
 
 .Node__change {
@@ -21,6 +23,8 @@
   margin: 30px 0;
   font-size: 3rem;
   font-weight: 700;
+  word-wrap: break-word;
+
 }
 
 .Node__content {
