--- a/src/components/notes/Note/Note.scss
+++ b/src/components/notes/Note/Note.scss
@@ -29,8 +29,14 @@
   }
 
   &:hover {
+    background: gray;
+
     .Note__delete {
       display: block;
     }
   }
+}
+
+.selectedEntry {
+  background: gray;
 }
